Cleaning comments, adding some extra messages in the chat and cleaning the code

--- a/views/connect.ejs
+++ b/views/connect.ejs
@@ -15,8 +15,8 @@
             <p>
                 <label for="username">username : </label><br/>
                 <input type="text" name="username" id="username" value="" autofocus /></p>
-                <p><label for="followuser">username to follow (optional) : </label><br/>
-                <input type="text" name="followuser" id="followuser" value="" autofocus /></p>
+                <p><label for="room">room (optional) : </label><br/>
+                <input type="text" name="room" id="room" value="<%= room %>" autofocus /></p>
                 <p><input type="submit" /></p>
             
         </form>
